refactor to completely separate component and dependency resolution - moved component reference updates into internalRelease - created a dedicated resource cache for dependency resolution so it wouldn't get mixed up with the released resources - updated tests with newly found dependencies