@@ -2,16 +2,14 @@ package org.opencds.cqf.fhir.utility;
 
 import static org.opencds.cqf.fhir.utility.BundleHelper.getEntryResourceFirstRep;
 
-import ca.uhn.fhir.model.api.IExtension;
 import ca.uhn.fhir.model.api.IQueryParameterType;
+import ca.uhn.fhir.parser.DataFormatException;
+import ca.uhn.fhir.rest.server.exceptions.UnprocessableEntityException;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-
-import ca.uhn.fhir.parser.DataFormatException;
-import ca.uhn.fhir.rest.server.exceptions.UnprocessableEntityException;
-
+import java.util.stream.Collectors;
 import org.hl7.fhir.exceptions.FHIRException;
 import org.hl7.fhir.instance.model.api.IBaseBundle;
 import org.hl7.fhir.instance.model.api.IBaseExtension;
@@ -78,53 +76,59 @@ public class SearchHelper {
      * @param canonical the canonical url to search for
      * @return
      */
-    private static <CanonicalType extends IPrimitiveType<String>> Class<? extends IBaseResource> getResourceType(Repository repository, CanonicalType canonical) {
+    private static <CanonicalType extends IPrimitiveType<String>> Class<? extends IBaseResource> getResourceType(
+            Repository repository, CanonicalType canonical) {
         Class<? extends IBaseResource> resourceType = null;
         try {
             resourceType = repository
-                .fhirContext()
-                .getResourceDefinition(Canonicals.getResourceType(canonical))
-                .getImplementingClass();
-        }
-        catch (DataFormatException e) {
+                    .fhirContext()
+                    .getResourceDefinition(Canonicals.getResourceType(canonical))
+                    .getImplementingClass();
+        } catch (DataFormatException e) {
             // Use the "cqf-resourceType" extension to figure this out, if it's present
             var cqfResourceTypeExt = getResourceTypeStringFromCqfResourceTypeExtension(canonical);
             if (cqfResourceTypeExt.isPresent()) {
                 try {
                     resourceType = repository
-                        .fhirContext()
-                        .getResourceDefinition(cqfResourceTypeExt.get())
-                        .getImplementingClass();
-                } catch (DataFormatException e) {
-                    throw new UnprocessableEntityException("cqf-resourceType extension contains invalid resource type: " + cqfResourceTypeExt.get());
+                            .fhirContext()
+                            .getResourceDefinition(cqfResourceTypeExt.get())
+                            .getImplementingClass();
+                } catch (DataFormatException e2) {
+                    throw new UnprocessableEntityException(
+                            "cqf-resourceType extension contains invalid resource type: " + cqfResourceTypeExt.get());
                 }
             } else {
                 // NOTE: This is based on the assumption that only CodeSystems don't follow the canonical pattern...
                 resourceType = repository
-                    .fhirContext()
-                    .getResourceDefinition("CodeSystem")
-                    .getImplementingClass();
+                        .fhirContext()
+                        .getResourceDefinition("CodeSystem")
+                        .getImplementingClass();
             }
         }
         return resourceType;
     }
 
     @SuppressWarnings("unchecked")
-    private static <CanonicalType extends IPrimitiveType<String>> Optional<String> getResourceTypeStringFromCqfResourceTypeExtension(CanonicalType canonical) {
+    private static <CanonicalType extends IPrimitiveType<String>>
+            Optional<String> getResourceTypeStringFromCqfResourceTypeExtension(CanonicalType canonical) {
         return getExtensions(canonical).stream()
-            .filter(ext -> ext.getUrl().contains("cqf-resourceType"))
-            .findAny()
-            .map(ext -> ((IPrimitiveType<String>)ext.getValue()).getValue());
+                .filter(ext -> ext.getUrl().contains("cqf-resourceType"))
+                .findAny()
+                .map(ext -> ((IPrimitiveType<String>) ext.getValue()).getValue());
     }
 
-    @SuppressWarnings({ "unchecked", "rawtypes" })
-    private static <CanonicalType extends IPrimitiveType<String>> List<IBaseExtension> getExtensions(CanonicalType canonical) {
+    @SuppressWarnings({"unchecked", "rawtypes"})
+    private static <CanonicalType extends IPrimitiveType<String>> List<IBaseExtension> getExtensions(
+            CanonicalType canonical) {
         if (canonical instanceof org.hl7.fhir.dstu3.model.PrimitiveType) {
-            return ((org.hl7.fhir.dstu3.model.PrimitiveType<String>) canonical).getExtension().stream().map(ext -> (IBaseExtension)ext).toList();
+            return ((org.hl7.fhir.dstu3.model.PrimitiveType<String>) canonical)
+                    .getExtension().stream().map(ext -> (IBaseExtension) ext).collect(Collectors.toList());
         } else if (canonical instanceof org.hl7.fhir.r4.model.PrimitiveType) {
-            return ((org.hl7.fhir.r4.model.PrimitiveType<String>) canonical).getExtension().stream().map(ext -> (IBaseExtension)ext).toList();
+            return ((org.hl7.fhir.r4.model.PrimitiveType<String>) canonical)
+                    .getExtension().stream().map(ext -> (IBaseExtension) ext).collect(Collectors.toList());
         } else if (canonical instanceof org.hl7.fhir.r5.model.PrimitiveType) {
-            return ((org.hl7.fhir.r5.model.PrimitiveType<String>) canonical).getExtension().stream().map(ext -> (IBaseExtension)ext).toList();
+            return ((org.hl7.fhir.r5.model.PrimitiveType<String>) canonical)
+                    .getExtension().stream().map(ext -> (IBaseExtension) ext).collect(Collectors.toList());
         } else {
             throw new UnprocessableEntityException("Unsupported FHIR version for canonical: " + canonical.getValue());
         }
@@ -145,17 +149,14 @@ public class SearchHelper {
         Class<? extends IBaseResource> resourceType = null;
         try {
             resourceType = repository
-                .fhirContext()
-                .getResourceDefinition(Canonicals.getResourceType(canonical))
-                .getImplementingClass();
-        }
-        catch (RuntimeException e) {
+                    .fhirContext()
+                    .getResourceDefinition(Canonicals.getResourceType(canonical))
+                    .getImplementingClass();
+        } catch (RuntimeException e) {
             // Can't use the "cqf-resourceType" extension to figure this out because we just get a canonical string
             // NOTE: This is based on the assumption that only CodeSystems don't follow the canonical pattern...
-            resourceType = repository
-                .fhirContext()
-                .getResourceDefinition("CodeSystem")
-                .getImplementingClass();
+            resourceType =
+                    repository.fhirContext().getResourceDefinition("CodeSystem").getImplementingClass();
         }
 
         return resourceType;
@@ -218,6 +219,24 @@ public class SearchHelper {
     /**
      * Searches the given Repository and handles paging to return all entries
      *
+     * @param <CanonicalType>
+     * @param repository the repository to search
+     * @param canonical the canonical url to search for
+     * @return
+     */
+    public static <CanonicalType extends IPrimitiveType<String>>
+            IBaseBundle searchRepositoryByCanonicalWithPagingWithParams(
+                    Repository repository,
+                    String canonical,
+                    Map<String, List<IQueryParameterType>> additionalSearchParams) {
+        var resourceType = getResourceType(repository, canonical);
+        return searchRepositoryByCanonicalWithPagingWithParams(
+                repository, canonical, resourceType, additionalSearchParams);
+    }
+
+    /**
+     * Searches the given Repository and handles paging to return all entries
+     *
      * @param <CanonicalType> an IPrimitiveType<String> type
      * @param <R> an IBaseResource type
      * @param repository the repository to search
@@ -228,9 +247,32 @@ public class SearchHelper {
     public static <CanonicalType extends IPrimitiveType<String>, R extends IBaseResource>
             IBaseBundle searchRepositoryByCanonicalWithPaging(
                     Repository repository, CanonicalType canonical, Class<R> resourceType) {
+        return searchRepositoryByCanonicalWithPagingWithParams(repository, canonical, resourceType, null);
+    }
+
+    /**
+     * Searches the given Repository and handles paging to return all entries
+     *
+     * @param <CanonicalType> an IPrimitiveType<String> type
+     * @param <R> an IBaseResource type
+     * @param repository the repository to search
+     * @param canonical the canonical url to search for
+     * @param resourceType the class of the IBaseResource type
+     * @param additionalSearchParams extra search parameters to search with
+     * @return
+     */
+    public static <CanonicalType extends IPrimitiveType<String>, R extends IBaseResource>
+            IBaseBundle searchRepositoryByCanonicalWithPagingWithParams(
+                    Repository repository,
+                    CanonicalType canonical,
+                    Class<R> resourceType,
+                    Map<String, List<IQueryParameterType>> additionalSearchParams) {
         var url = Canonicals.getUrl(canonical);
         var version = Canonicals.getVersion(canonical);
         var searchParams = version == null ? Searches.byUrl(url) : Searches.byUrlAndVersion(url, version);
+        if (additionalSearchParams != null) {
+            searchParams.putAll(additionalSearchParams);
+        }
         var searchResult = searchRepositoryWithPaging(repository, resourceType, searchParams, Collections.emptyMap());
 
         return searchResult;
@@ -247,9 +289,30 @@ public class SearchHelper {
      */
     public static <R extends IBaseResource> IBaseBundle searchRepositoryByCanonicalWithPaging(
             Repository repository, String canonical, Class<R> resourceType) {
+        return searchRepositoryByCanonicalWithPagingWithParams(repository, canonical, resourceType, null);
+    }
+
+    /**
+     * Searches the given Repository and handles paging to return all entries
+     *
+     * @param <R> an IBaseResource type
+     * @param repository the repository to search
+     * @param canonical the canonical url to search for
+     * @param resourceType the class of the IBaseResource type
+     * @param additionalSearchParams extra search parameters to search with
+     * @return
+     */
+    public static <R extends IBaseResource> IBaseBundle searchRepositoryByCanonicalWithPagingWithParams(
+            Repository repository,
+            String canonical,
+            Class<R> resourceType,
+            Map<String, List<IQueryParameterType>> additionalSearchParams) {
         var url = Canonicals.getUrl(canonical);
         var version = Canonicals.getVersion(canonical);
         var searchParams = version == null ? Searches.byUrl(url) : Searches.byUrlAndVersion(url, version);
+        if (additionalSearchParams != null) {
+            searchParams.putAll(additionalSearchParams);
+        }
         var searchResult = searchRepositoryWithPaging(repository, resourceType, searchParams, Collections.emptyMap());
 
         return searchResult;
